citations added to introduction, all should be in place

--- a/chap1.tex
+++ b/chap1.tex
@@ -908,7 +908,7 @@ sensing and acting in the manner of a
  areas including control theory,
  cybernetics---from the Greek \emph{cybernetes}\footnote{This is as
    written in Wiener's contemporary papers. It should perhaps be written
-   as \emph{kybernetes}, κυβερνήτης.} meaning
+   as \emph{kybernetes}, κυβερνήτης \kappa\upsilon\beta\varepsilon\rho\nu\'{\eta}\tau\eta\varsigma. \cite[p. 11]{cybernetics}} meaning
  ``steersman'' \cite[p. 6]{wienerMainIdeas}---extended their reach to more complex
  systems: ``control and communication in the animal and machine''. As
  Norbert Wiener puts it, control, or the
