--- a/intro.tex
+++ b/intro.tex
@@ -72,7 +72,8 @@ same history as interchangeable parts, assembly lines, machine tools,
 and scientific management; as electrification, computerization, and
 networked interconnection. When asked how to make something better,
 safer, faster, easier, more productive, we involve machines or at
-least what H. M. Collins describes as ``machine-like actions''\cite{???}. It is
+least what H. M. Collins describes as ``machine-like actions''
+\cite[p. 42]{Collins}. It is
 vital that we recognize this is not a new predilection, but is
 something that has been with us since the Industrial Revolution.
 Furthermore, technological visions and concepts inscribe excitement about the
@@ -80,8 +81,10 @@ technologies of the present moment, and this tendency has deeply
 affected the history of automated vehicle research. From the railroad to the
 Internet (passing through the telegraph, the airship, electrification,
 television, thpe automobile, the rocket), each new mode of
-communication (or transportation\footnote{\cite{???}}) ushers in new visions of our
-collective future. We are famously bad at these predictions\cite{???} but they
+communication (or transportation\footnote{Rudolf Arnheim referred to
+  TV, a ``relative of motorcar and airplane,'' as a ``means of
+  cultural transportation'' \cite[p. 194]{arnheim}}) ushers in new visions of our
+collective future. We are famously bad at these predictions \cite{vanriper} but they
 nevertheless drive the popular imaginary, which has included automated
 vehicles since the 1920s, and other types of automation for hundreds
 of years previous\footnote{For more on this, see chapter
@@ -98,20 +101,21 @@ exciting, emerging technology, that was envisioned as a way to take
 the driver out of the vehicle, even if a human's direct commands were
 still necessary for vehicle operations. Aachen Motors's ``Phantom
 Auto,'' operating on the same principles, toured Milwaukee a year
-later,\cite{???} and returned as an attraction in Fredericksburg in 1932\cite{???}.
+later, \cite{phantomAuto} and returned as an attraction in
+Fredericksburg in 1932 \cite{phantomAuto2}. 
 Radio control had at this point been public knowledge for at least two
 decades, since Nikola Tesla's 1898 demonstration of a radio-controlled
-boat,\cite{???} but though it was not fundamentally new, the use of the
+boat, but though it was not fundamentally new, the use of the
 technology on public roads nevertheless shocked onlookers.
 Contemporary news articles describe the machine as if it drove itself,
 as if the physical position of the person was what mattered, not the
 fact that a human was always using the radio transmitter:  ``Driverless,
 it will start its own motor, throw in its clutch, twist its steering
 wheel, toot its horn, and it may even 'sass' the policeman at the
-corner'' \cite{???}. Described as``one of the most amazing products of
+corner'' \cite{phantomAuto}. Described as``one of the most amazing products of
 modern science,'' the 
 car proceeds ``as though there were an invisible driver at the wheel''
-in an effect both ``uncanny and mystifying''\cite{???}. Such work,
+in an effect both ``uncanny and mystifying''\cite{phantomAuto2}. Such work,
 though it seems relatively primitive in retrospect (hardly more than a
 glorified RC-car, though it was a compelling demonstration of the
 power of radio control to remove the driver from a full-size vehicle), may well have
@@ -128,15 +132,16 @@ Trylon---manifested the modernist techno-utopian ideology\footnote{As a
   side note, this has been described not only as techno-utopian but as
 an outgrowth of commodity scientism, a triumph of a sort of
 marketing-driven approach to technology that is more rhetoric than
-substance.\cite{???-DMsclass} It seems likely that commodity
+substance \cite{smithSelling}. It seems likely that commodity
 scientism, or a similar phenomenon, is deeply involved in the ways
 modern technological narratives are generated and consumed.} that drove the
-dramatic technological displays\cite{???}. The great success of the fair was
+dramatic technological displays \cite[p. 371]{nyeElectrifying}. The
+great success of the fair was 
 GM's Futurama exhibit: the line for the exhibit routinely stretched to
 two miles in length, and 28,000 people visited the exhibit each day.
 The Futurama exhibit presented an idea of what the world would look
 like in 1960, one which included trains and aircraft, a farm, and an
-amusement park.\cite{???} But though GM's displays went far beyond them,
+amusement park \cite[p. 3-4]{wetmore}. But though GM's displays went far beyond them,
 automobiles were still the focal point: the bird's-eye view presented a
 future city with multi-lane elevated expressways filled with largely
 automated vehicles. For their concept cars, GM separated the control
@@ -146,12 +151,13 @@ curved barriers that would restore the position of the car using
 gravity, a low-tech solution to the more complicated problem of
 steering. However, the Futurama exhibit described that distance
 between cars would be maintained via a ``sophisticated system of radio
-control''\cite{???}. Prior to electronic circuits, this would have been
+control'' \cite[p. 5]{wetmore}. Prior to electronic circuits, this would have been
 accomplished with vacuum tubes, a technology well-known at the time,
 and certainly subject to significant hurdles in terms of mechanical
 reliability. It was not until digital electronics were invented that
 hardware became the relatively stable component of driverless systems,
-with software reliability becoming the key issue\cite{???}. But despite the
+with software reliability becoming the key issue \cite[p.
+  15]{wetmore}. But despite the 
 fragility of glass tubes traveling at high speed, and despite the fact
 that the technology could work well only for sufficiently
 well-designed roads (high-speed highways, built specifically for these
@@ -162,14 +168,16 @@ modernist, and efficient; the rationalization of the factory, already
 achieved and itself a subject of a great deal of public
 interest---through factory tours of major Detroit automotive plants, and
 working GM and Ford assembly lines at the earlier Century of Progress
-Exhibition in Chicago (1933-1934)\cite{???}---had spread to the city and
+Exhibition in Chicago (1933-1934) \cite[p. 63-64]{nyeAmericas}---had
+spread to the city and 
 countryside, where working hours were reduced through electrification,
 and even driving could become leisure, the mere inhabitation of a
 device operating via radio control.
 
 But radio was not the only revolutionary medium to be included in
  portrayals of the self-driving car of the future. The cover of the
- April 1936\cite{???} edition of the magazine \emph{Modern Mechanix} betrays a
+ April 1936 \cite{modernmechanix} edition of the magazine \emph{Modern
+   Mechanix} betrays a 
  different vision of the autonomous vehicle: the so-called ``electric
  eye automobile'' which would steer itself via a control loop, using an
  array of ``electric eyes,'' or photocells, on the car to track a light
@@ -186,20 +194,22 @@ steering mechanism. A powerful beam of light directed at a large lens
 on the front of the car is concentrated on steel mirrors set at an
 angle in the trackbed. The reflections are ``caught'' by the electric
 eyes which convey the electrical impulses to a mechanical-electrical
-brain which keeps the speeding car on its course \cite{???}.
+brain which keeps the speeding car on its course \cite[p. 71]{lightbeams}.
 \end{quote}
 
 The cover pictures an intrepid ``driver'' using a camera to take a
 ``movie recording'' of the car's performance, while he leaves the
-``driving responsibilities to the mechanical and electrical brain''\cite{???}.
+``driving responsibilities to the mechanical and electrical brain''
+\cite[p. 71]{lightbeams}.
 Responsible for initially putting the car into motion, the driver can
 then step back from the task of driving, allowing the electrical
 controls of mechanical linkages within the car---meticulously diagrammed
 within the magazine article---to convey him safely and speedily down
 the track. The photocells within the vehicle's sensing mechanism would
 operate relays controlling the steering linkage, closing the loop
-between sensing and acting in the manner of a ``teleological,''
-self-governing mechanism with corrective feedback \cite{???}. But how
+between sensing and acting in the manner of a ``teleological''
+\cite{behaviorPurpose}, 
+self-governing mechanism with corrective feedback. But how
 the car's governor could be modified to allow it to race with or
 beside other cars is not mentioned, which is telling since it is the
 complexities of the road environment that make automated driving so difficult.
@@ -213,17 +223,20 @@ Daily Tribune}, April 25, 1959, in a speech he gave at Northwestern
 University, taking seriously the idea of autonomous cars. The article,
 titled ``In 50 Years: Cars Flying Like Missiles!'' asks readers: ``Can
 you imagine flying automobiles directed by automatic guidance
-systems?''\cite{???}. Author Matt Novak\footnote{Novak writes the
- blog Paleofuture, once on the Smithsonian website, now on Gizmodo.} suggests that ``Arthur Radebaugh's syndicated
+systems?''\cite{tribuneViaPaleo}. Author Matt Novak\footnote{Novak writes the
+ blog Paleofuture, once on the Smithsonian website, now on Gizmodo,
+ about past visions of the future.} suggests that ``Arthur Radebaugh's syndicated
 Sunday comic 'Closer Than We Think' was also a likely inspiration''
 for contemporary images of advanced car technologies---in this case
 the vision of flying cars shown in \emph{The Jetsons} in 1962, a
 dream related to, but still distinct from, the driverless dream---as in
 1958 it depicted hovering 
 cars floating on an air cushion in an ``already proved'' concept
-publicized by the same Andrew Kucher\cite{???}. Newspapers from April of that
+publicized by the same Andrew Kucher \cite{novakRecapping}. Newspapers
+from April of that 
 year also describe a 3-foot-long model of Kucher's ``Glideair'' that was
-demonstrated to reporters in Detroit\cite{???}. The car may not be driverless,
+demonstrated to reporters in Detroit \cite{novakFlying}. The car may
+not be driverless, 
 but the people depicted riding in the ``flying carpet car'' in
 Radebaugh's illustration don't seem to be paying much attention to
 where it is going, and the road surface is bordered with ridges that
@@ -233,7 +246,8 @@ demarcated space.
 One particularly salient public image from the 1950s comes from the
 \emph{Saturday Evening Post}, which ran an advertisement for ``America's
 Electric Light and Power Companies'' that depicted self-driving cars
-coasting through an idyllic landscape, guided by electricity.\cite{???} The roadways
+coasting through an idyllic landscape, guided by electricity
+\cite{weber}. The roadways 
 are clean and clear, stretching off confidently into the distance. The
 landscape, tamed and controlled, yet retains its natural beauty:
 nowhere to be seen are smokestacks and the power plants generating the
@@ -255,7 +269,7 @@ One day your car may speed along an electric super-highway, its speed
 and steering automatically controlled by electronic devices embedded
 in the road. Travel will be more enjoyable. Highways will be made
 safe---by electricity! No traffic jams . . . no collisions . . . no
-driver fatigue \cite{???}.
+driver fatigue \cite{weber}.
 \end{quote}
 The limitless possibilities of electricity, measured and controlled by
 America's Electric Light and Power Companies, reproduce a conservative
@@ -263,27 +277,28 @@ present into an equally conservative future.
 
 If electricity was still the force that would be harnessed to make the
 roadways safe, what were the ``mechanical equivalents of sense
-organs''\cite{???-wiener}for the driverless car? New
+organs'' \cite{wienerMachineThreat}for the driverless car? New
 wartime and postwar developments in electronics, the same ones that
 inspired new science fiction visions of the future, drove actual
 research in automated vehicle systems. In the early 1950s, General
 Motors and RCA developed a scale model of an automated highway system,
 completed in 1953, that would allow the two companies to experiment
-with developing real steering and distance control systems.\cite{???}
+with developing real steering and distance control systems \cite[p. 6]{wetmore}.
 General Motors's 1950s Firebird concept
 vehicles sold themselves on this research, despite the fact that
-Firebird II ``had no automated capabilities whatsoever.''\cite{???} GM's
+Firebird II ``had no automated capabilities whatsoever'' \cite[p. 7]{wetmore}. GM's
 promotional films suggested the vehicle could be controlled
 electronically from traffic control towers---like those in use in
 aviation---placed along major highways: the car was ``under the direction
-of an 'electronic brain' on a dream highway of the future.''\cite{???} This
+of an 'electronic brain' on a dream highway of the future'' \cite[p.
+  7]{wetmore}. This 
 would have been the realization of the New York World's Fair exhibit
 from two decades earlier. Building to make
 this optimistic vision of GM's engineering ability a reality,
 engineers lead by Joseph Bidwell and Lawrence Hafstad within GM
 Research installed ``pick-up coils'' on a 1958 Chevrolet: through a
 feedback system like that of the ``electric eye automobile,'' these
-coils would adjust the vehicle's steering \cite{???}. But unlike the
+coils would adjust the vehicle's steering \cite[p. 7]{wetmore}. But unlike the
 light-guided vehicle from the 1930s, this car had a new guidance
 mechanism, which is entirely consistent with the image presented in
 the \emph{Saturday Evening Post}: a wire carrying alternating current would
@@ -296,7 +311,8 @@ beneath the concrete surface. It was the first demonstration of its
 kind with a full-size passenger car, indicating the possibility of a
 built-in guidance system for tomorrow's highways.... The car rolled
 along the two-lane check road and negotiated the banked turn-around
-loops at either end without the driver's hands on the steering wheel \cite{???}.
+loops at either end without the driver's hands on the steering wheel
+\cite[p. 7]{wetmore}.
 \end{quote}
 
 Instead of the mechanical ``half-pipes'' of the 1939 Futurama roadway, advances in
@@ -308,10 +324,10 @@ working on an intelligent road system of his own. His concept,
 inspired by ``railroad block signals,'' used circuits embedded in the
 road to magnetically sense vehicle speed and location, placing sensing
 and coordination capabilities outside of the vehicle, in road-side
-systems \cite{???}. Zworykin's centralized planning model would send
+systems:  Zworykin's centralized planning model would send
 instructions to individual cars, and a 1/40th scale demonstration
 system was built for the 1960 Highway Research Board meeting in
-Washington D.C \cite{???}.
+Washington D.C \cite[p. 9]{wetmore}.
 
 The 1964 New York World's Fair hosted a second Futurama exhibit, in
 which GM presented an automated highway system much like Zworykin's
@@ -321,7 +337,7 @@ thus described:
 A revolutionary 'Autoline' expands the capacity of a three-lane
 expressway: Electronically, a control-tower operator steers, brakes
 and sets the speed of each car in an automatic lane; groups of cars
-move at equal intervals as a group \cite{???}.
+move at equal intervals as a group \cite[p. 9]{wetmore}.
 \end{quote}
  Advances in
 electronics, and the expansion of early control theory into
@@ -332,9 +348,9 @@ possible. Wiener himself weighed in, in a lecture given in 1960, to
 make the case for automated control systems: ``by the time we are able
 to react to our senses and stop the car which we are driving, it may
 already have run head on into a wall,'' he wrote, and the answer to
-this problem was the lightning speed of cybernetic control.\cite{???} But real
+this problem was the lightning speed of cybernetic control \cite{wienerOn}. But real
 developments in automated driving did not materialize, and research
-languished throughout the late 1960s and 1970s.\cite{???}
+languished throughout the late 1960s and 1970s \cite[p. 10]{wetmore}.
 
 \subsection{Research at the Turn of the Century}
 
@@ -346,55 +362,64 @@ computer-vision based approaches. While computer vision techniques had
 been experimented with for vehicle guidance since 1969, it was not
 until the 1980s that microelectronics became powerful enough to
 process images in near real time and compact enough to be placed on
-the vehicle itself\cite{???}. In the 1980s, Ernst Dickmanns's lab at the
+the vehicle itself \cite[p. v]{dickmannsDynamic}. In the 1980s, Ernst
+Dickmanns's lab at the 
 University Bundswerhr, in Munich, Germany was active in some of the
-earliest self-driving car research and development\cite{???}. Their early
+earliest self-driving car research and development \cite{schmidhuber}. Their early
 vehicle, a specially equipped 5-ton Mercedes-Benz van---computerized
 controls could be used to perform all necessary driver inputs---was
 fitted with cameras, other sensors, and an image-processing system to
 close the control loop and drive the vehicle based on visual
-information.\cite{???} This early experiment,
+information \cite{vamors-p}. This early experiment,
 VaMoRs,\footnote{Versuchsfahrzeug f\"{u}r autonome Mobilit\"{a}t und
-  Rechnersehen, or ``test vehicle for autonomous mobility and computer vision''} paralleled in the United 
+  Rechnersehen, or ``test vehicle for autonomous mobility and computer
+  vision''} paralleled in the United  
 States with a Carnegie Mellon-developed vehicle based on a Chevrolet
-panel van, was successfully tested on roads without traffic at up to
-60 miles per hour,\cite{???} and was soon followed by new projects produced as
+panel van \cite{bogostHist}, was successfully tested on roads without
+traffic at up to 
+60 miles per hour, and was soon followed by new projects produced as
 part of the EUREKA PROMETHEUS\footnote{PROgraMme for a European
-  Traffic of Highest Efficiency and Unprecedented Safety} project\cite{???}. The largest driverless vehicle
+  Traffic of Highest Efficiency and Unprecedented Safety} project \cite{eureka}. The largest driverless vehicle
 research project of the time, funded by EU member states to the tune
 of almost 750 million Euros, PROMETHEUS ran from 1987 to 1995 and
 involved the VaMP\footnote{VaMoRs Passenger Car} vehicle from
 Dickmanns's research lab along with its 
 Daimler-Benz twin, VITA-II. Typical of vehicles of the time,
-VITA\footnote{VIsion Technology Application} used
+VITA\footnote{VIsion Technology Application. The original VITA was a
+  D811 Mercedes van, chosen in order to store both computing
+  equipment, power supplies, and environmental control for those
+  electronics \cite[p. 37]{ulmerVITA}.} used
 a CCIR\footnote{This is a particular video standard, but its specifics are
   not important here.} analog video-camera signal processed through a framegrabber
 which would feed the visual information into the transputer-based
-parallel-processing system \cite{???}. The VITA-II system, scaled down to fit in
+parallel-processing system \cite[p. 38]{ulmerVITA}. The VITA-II
+system, scaled down to fit in 
 a passenger car (an S-class SEL 500), again used digitized analog
-video signals to detect lanes and other vehicles \cite{???}. Additional sensors
+video signals to detect lanes and other vehicles \cite[p.
+  2]{ulmerVITA-II}. Additional sensors 
 detected brake pressure, temperature, steering angle, acceleration in
-lateral and longitudinal directions, and yaw \cite{???}. The camera systems used
+lateral and longitudinal directions, and yaw \cite[p.
+  2]{ulmerVITA-II}. The camera systems used 
 applied two-camera setups with stabilized two-axis rotation to allow
-them to follow objects of interest in the scene \cite{???}. And the
+them to follow objects of interest in the scene \cite{cameraPlatform}. And the
 technology largely worked, with the PROMETHEUS project coming to a
 successful conclusion in 1994 and 1995 with 1000 kilometers of largely
 autonomous operation in normal traffic conditions on Paris motorways,
-as well as a finale drive from Munich to Copenhagen \cite{???}.
+as well as a finale drive from Munich to Copenhagen \cite{makingBertha}.
 Meanwhile, vision-based research also occurred actively in the United States;
 Congress passed the Intermodal 
 Surface Transportation Efficiency Act in 1991, which allowed for \$650 million
 in funding for driverless vehicle research over the following six
 years
-\cite{???-http://www.smithsonianmag.com/history/the-national-automated-highway-system-that-almost-was-63027245/}.\footnote{Novak
+\cite{novakAlmost}.\footnote{Novak
 of the \emph{Smithsonian} blog suggests that the biggest problem with
 the legislation was that it failed to define what a ``fully automated
 highway system'' would be, such that it could be achieved in the time
-allotted \cite{???-same}. This is an important consideration for
+allotted \cite{novakAlmost}. This is an important consideration for
 future work.} The act spurred a consortium of nine organizations to
 work on meeting the 1997 deadline for demonstrations.
 Notably, a Congressional report described the goal as ``hands-off,
-feet-off'' driving \cite{???-same}, language which returns in the NHTSA's recent
+feet-off'' driving \cite{novakAlmost}, language which returns in the NHTSA's recent
 \emph{Preliminary Statement of Policy Concerning Automated Vehicles}
 and proves similarly unhelpful, as will be described in chapter
 \ref{chap:1}.
@@ -410,7 +435,7 @@ and proves similarly unhelpful, as will be described in chapter
 
 Further autonomous vehicle research has progressed incrementally from
 these vision-based beginnings. The
-DARPA Grand Challenge in 2004 and 2005 \cite{???}, and the DARPA Urban Challenge
+DARPA Grand Challenge in 2004 and 2005, and the DARPA Urban Challenge
 in 2007, spurred significant interest, and brought together industry
 groups and universities to 
 try to extend the capabilities of fully autonomous vehicles. While the
@@ -433,12 +458,12 @@ look of the autonomous car with its roof mounted LIDAR scanner, other
 companies are developing vehicles with slightly different sensors and
 techniques. Google's approach uses cameras and the rotating laser
 scanner, along with detailed pre-mapping and highly-accurate
-differential GPS \cite{???}. Mercedes, so far, focuses more on cameras and radar,
+differential GPS \cite{guizzo}. Mercedes, so far, focuses more on cameras and radar,
 without using expensive LIDAR systems or requiring exquisitely
 detailed pre-mapping of streets---and some of these features are
 already seen in the new S-class luxury sedan, though these vehicles
 have not yet reached the level of capability of Mercedes's ``Bertha''
-test vehicle \cite{???}. But these sensing choices come with their own
+test vehicle \cite{makingBertha}. But these sensing choices come with their own
 trade-offs in terms of operations, safety, and how safety can be
 determined and proven. Even Apple claims, as of the time of writing,
 to be working on an autonomous vehicle, though its approach has not
@@ -498,12 +523,12 @@ and concepts at CES worked glitz and glamour into the dream of a
 driverless future. Mercedes-Benz's F015 autonomous car
 concept forgoes the traditional seating arrangement in favor of
 rotating chairs that turn the center of the car into a lounge or
-meeting space \cite{???}. The car's side windows are relatively minimal, its
+meeting space \cite{riofrioMB}. The car's side windows are relatively minimal, its
 doors taken up primarily by touch screens. In fact, the interior is
 covered in touchable displays, set up for an immersive digital
 experience. But beneath this shiny media exterior sits a relatively
 unglamorous purpose:  its publicity photos show serious-looking, young white
-businesspeople in uniform grey work clothing \cite{???}. The environment is
+businesspeople in uniform grey work clothing \cite{simpsonDesign}. The environment is
 high tech and sharply clinical. Far from an exuberant depiction of the
 promise of media technology in the automobile, this future is so
 serious as to be dull: a homogeneous work space bleeding out into
@@ -524,17 +549,17 @@ as five years, and that in just two decades the majority of cars on the road wil
 fully autonomous. Even respected business-information and consulting
 bodies have bought into this dream.\footnote{For example, the IHS
   predicts 54 million such vehicles by 2035, which is not as extreme,
-  but still a sizable fraction of road vehicles \cite{IHSstudy}} In
+  but still a sizable fraction of road vehicles \cite{IHSstudy}.} In
 these vehicles, the users would 
 step in, select a destination, and would then be free to read, sleep,
 watch a movie, answer emails, or otherwise occupy themselves without
 needing to pay any attention to the operation of the vehicle. While this
 vision has its benefits, it makes many people nervous about
 ceding their driving agency to a computer system, especially on such a
-potentially short timescale.\cite{clytton} Google's Chris Urmson is
+potentially short timescale \cite{clytton}. Google's Chris Urmson is
 still claiming that self-driving cars will be available in 5 years (a
 claim first made in August, 2014, a personal goal based on when his
-eldest son can get his license\cite{???-GomesHidden}), and expects
+eldest son can get his license\cite{gomesObstacles}.), and expects
 these vehicles not to have steering wheels or the possibility of human
 control. That these vehicles would operate on public roadways is not
 stated explicitly---and seems optimistic given the speed of regulation
@@ -551,16 +576,16 @@ the summer of 2015,
 which explicitly invokes both existing aircraft automation---or at
 least popular ideas about it---and Chrysler's early ``Auto Pilot''
 cruise-control system, from the late 1950s
-\cite{???-http://mobile.nytimes.com/2015/03/20/business/elon-musk-says-self-driving-tesla-cars-will-be-in-the-us-by-summer.html?\_r=0\&referrer=}.
+\cite{kesslerElon}.
 Though Tesla is clear that human involvement and judgment will be
 required at first, Musk expects
 that once sufficiently capable vehicles 
 come to market, human drivers may be
-outlawed.\cite{???-http://www.forbes.com/sites/leoking/2015/03/19/googles-gargantuan-push-for-cars-with-no-steering-wheel-by-2020/}.
+outlawed \cite{kingGoogle}.
 In this vision, the technology is ready, or almost ready, and law and policy need to
 adapt. ``Robots can already outdrive humans,'' this view says, ``now
 everyone needs to get out of the way''
-\cite{???-http://www.popsci.com/cars/article/2013-09/google-self-driving-car}.
+\cite{fisherInside}.
 
 %% 2) deal in general with some of the popular portrayals of the
 %% technology:  (4 p)
@@ -577,11 +602,11 @@ sort of optimistic timescale. Moral and ethical
 quandaries---driverless car ``trolley problems''---question how
 autonomous machines will respond to unusual situations and whether
 people will accept those responses. Would American freedom-rhetoric
-allow the outlawing of human drivers \cite{???-http://www.washingtonpost.com/blogs/wonkblog/wp/2015/03/18/should-we-outlaw-human-drivers-in-a-world-of-driverless-cars/}? 
+allow the outlawing of human drivers \cite{badgerElon}? 
 Perhaps not. Would we accept a computerized device that kills ``3,300
 Americans'' per year, but replaces the ``roughly 33,000 lives a year
 that perish on U.S. roads as a result of human
-error''\cite{???-http://www.washingtonpost.com/blogs/innovations/wp/2015/03/16/driverless-cars-a-tremendous-innovation-with-a-glaring-achilles-heel/}?
+error''\cite{mcfarlandDriverless}?
 This is a difficult empirical question about the propensity of people
 to want to have a recognizable site for blame, and the tolerance of
 human beings for computer error. Among others, Bill Gurley, an Uber
@@ -589,12 +614,12 @@ investor interviewed because of his connection to companies engaged in
 driverless vehicle research, believes that the reliability requirement
 for these systems---''four nines,'' as he describes it---given the
 catastrophic potential for errors renders the technology ``a long way
-off''\cite{???--http://www.businessinsider.com/bill-gurley-is-skeptical-of-driverless-cars-2015-3}.
+off''\cite{shontellTop}.
 Even statements from very respected autonomy researchers are used to
 support this view: John Leonard, notable as one of the researchers who
 worked on MIT's entrant to the DARPA Urban Challenge in 2007, has gone
 on the record multiple times about his doubts, and has become a very
-public face for driverless car skepticism\cite{???-gomes}.
+public face for driverless car skepticism \cite{ramseyWhen} \cite{gomesCircles}.
 
 From all this, one would be excused for thinking this was just an
 argument between the technophiles and the naysayers, the daring dreamers versus the
@@ -727,7 +752,8 @@ and different ideas guided, their stories.
 Fundamentally, I am a scientist at heart,\footnote{I mean this not necessarily in
   the methods of what is considered modern, experimental science,
   which does not fit easily within the realms of historical critique,
-  but in terms of ethos, and some notion of falsifiability.} and I seek to approach my
+  but in terms of ethos, and some notion of falsifiability.} and I
+seek to approach my 
 work in that light. What idea, or hypothesis, does this thesis attempt
 to disprove? While I say many things that have significant backing,
 though they may not themselves be provable\footnote{I hope they are
