--- a/main.bib
+++ b/main.bib
@@ -261,12 +261,38 @@
    year = "ca. 1956",
 }
 
+@TECHREPORT{wienerOn,
+   author = "Norbert Wiener",
+   title = "{O}n {T}he {T}echnical {D}evelopment of {A}utomatization and {S}ome of its {M}oral {C}onsequences",
+   institution = "From the Norbert Wiener Papers, MC 22. Box 33A: Folder 865",
+   address = "Institute Archives and Special Collections, MIT Libraries, Cambridge, MA",
+   year = "1960",
+}
+
 @TECHREPORT{dartmouthconf,
    author = "J. McCarthy and M. L. Minksy and N. Rochester and C. E. Shannon",
    title = "{A} {P}roposal for the {D}artmouth {S}ummer {R}esearch {P}roject on {A}rtificial {I}ntelligence",
    institution = "From the Norbert Wiener Papers, MC 22. Box 31: Folder 798",
+   address = "Institute Archives and Special Collections, MIT Libraries, Cambridge, MA",
    year = "1955",
    month = "August 31",
+}
+
+@ARTICLE{behaviorPurpose,
+   author = "Arturo Rosenblueth and Norbert Wiener and Julian Bigelow",
+   title = "{B}ehavior, {P}urpose and {T}eleology",
+   journal = "Philosophy of Science",
+   year = "1943",
+   volume = 10,
+   pages = "18--24",
+}
+
+@BOOK{cybernetics,
+   author = "Norbert Wiener",
+   title = "Cybernetics Or Control and Communication in the Animal and the Machine",
+   publisher = "MIT Press",
+   address = "Cambridge, MA",
+   year = "1965",
 }
 
 @BOOK{pollock,
@@ -812,6 +838,14 @@
    journal = "Proceedings of the Intelligent Vehicles '94 Symposium",
    year = 1994,
    pages = "1--6",
+}
+
+@ARTICLE{cameraPlatform,
+   author = "J. Schiehlen and E. D. Dickmanns",
+   title = "{A} {C}amera {P}latform for {I}ntelligent {V}ehicles",
+   journal = "Proceedings of the Intelligent Vehicles '94 Symposium",
+   year = 1994,
+   pages = "393--398",
 }
 
 @ARTICLE{ubergizmo,
@@ -1744,11 +1778,236 @@
    key = "Science: Radio Auto",
    author = "",
    title = "{S}cience: {R}adio {A}uto",
-   journal = Time Magazine,
+   journal = "Time Magazine",
    month = "August 10",
    year = "1925",
    note = "http://content.time.com/time/magazine/article/0,9171,720720,00.html",
 }
+
+@BOOK{arnheim,
+   author = "Rudolf Arnheim",
+   title = "Film as Art",
+   publisher = "University of California Press",
+   address = "Berkeley, CA",
+   year = "2006",
+   note = "See his essay 'A Forecast of Television' particularly",
+}
+
+@ARTICLE{vanriper,
+   author = "A. Bowdoin Van Riper",
+   title = "{I}magining {T}omorrow: {W}hy the {T}echnological {F}uture {W}e {I}magine {I}s {S}eldom the {O}ne {W}e {G}et",
+   journal = "Synesis: A Journal of Science, Technology, Ethics and Policy",
+   volume = "4",
+   year = "2013",
+}
+
+@ARTICLE{phantomAuto,
+   key = "'Phantom Auto' will ..."
+   author = "",
+   title = "'Phantom Auto' will tour city",
+   journal = "The Milwaukee Sentinel",
+   month = "December 8",
+   year = "1926",
+   note = "Via the Google News Archive."
+}
+
+@ARTICLE{phantomAuto2,
+   key = "'Phantom Auto' to Be ..."
+   author = "",
+   title = "'Phantom Auto' to Be Operated Here",
+   journal = "The Free-Lance Star",
+   month = "June 17",
+   year = "1932",
+   note = "Via the Google News Archive."
+}
+
+@UNPUBLISHED{modernmechanix,
+   key = "Modern Mechanix (cover)"
+   author = "",
+   title = "Modern Mechanix (cover)",
+   month = "April",
+   year = "1936"
+   note = "Accessed December 15, 2014: http://www.coverbrowser.com/covers/modern-mechanix/2",
+}
+
+@ARTICLE{lightbeams,
+   key = "Light Beams ..."
+   author = "",
+   title = "Light Beams Steer Super Racing Cars",
+   journal = "Modern Mechanix",
+   month = "April",
+   year = "1936",
+   note = "http://blog.modernmechanix.com/light-beams-steer-super-racing-cars/",
+}
+
+@ARTICLE{tribuneViaPaleo,
+   key = "In 50 Years ..."
+   author = "",
+   title = "In 50 Years: Cars Flying Like Missiles!",
+   journal = "Chicago Daily Tribune",
+   month = "April 26",
+   year = "1959",
+   note = "Via Matt Novak's Paleofuture: http://paleofuture.com/blog/2007/4/28/in-50-years-cars-flying-like-missiles-chicago-daily-tribune.html",
+}
+
+@ARTICLE{novakRecapping,
+   author = "Matt Novak",
+   title = "Recapping 'The Jetsons': Episode 03 -- The Space Car",
+   journal = "Smithsonian",
+   month = "October 9",
+   year = "2012",
+   note = "http://www.smithsonianmag.com/history/recapping-the-jetsons-episode-03-the-space-car-67174086/?no-ist",
+}
+
+@ARTICLE{novakFlying,
+   author = "Matt Novak",
+   title = "Flying Carpet Car (1958)",
+   journal = "Paleofuture",
+   month = "February 22",
+   year = "2011",
+   note = "http://paleofuture.com/blog/2011/2/22/flying-carpet-car-1958-1.html",
+}
+
+@ARTICLE{weber,
+   author = "Marc Weber",
+   title = "Where to? A History of Autonomous Vehicles",
+   journal = "Computer History Museum",
+   month = "May",
+   year = "2014",
+   note = "www.computerhistory.org/atchm/where-to-a-history-of-autonomous-vehicles/",
+}
+
+@BOOK{dickmannsDynamic,
+   author = "Ernst D. Dickmanns",
+   title = "{D}ynamic {V}ision for {P}erception and {C}ontrol of {M}otion",
+   publisher = "Springer-Verlag",
+   address = "London",
+   year = "2007",
+}
+
+@ARTICLE{schmidhuber,
+   author = "Jurgen Schmidhuber",
+   title = "Robot cars -- autonomous vehicles -- history of self-driving cars",
+   journal = "Instituto Dalle Molle di Studi sull'Intelligenza Artificiale",
+   note = "Accessed December 15, 2014: http://people.idsia.ch/~juergen/robotcars.html",
+}
+
+@ARTICLE{bogostHist,
+   author = "Ian Bogost",
+   title = "The Secret History of the Robot Car",
+   journal = "The Atlantic",
+   month = "October 14",
+   year = "2014",
+   note = "http://www.theatlantic.com/magazine/archive/2014/11/the-secret-history-of-the-robot-car/380791/",
+}
+
+@ARTICLE{eureka,
+   key = "EUREKA",
+   author = "",
+   title = "EUREKA Project > 45 PROMETHEUS",
+   journal = "EUREKA Website",
+   note = "Accessed December 15, 2014: http://www.eurekanetwork.org/project/-/id/45",
+}
+
+@ARTICLE{novakAlmost,
+   author = "Matt Novak",
+   title = "The National Automated Highway System That Almost Was",
+   journal = "Smithsonian",
+   month = "May 16",
+   year = "2013",
+   note = "http://www.smithsonianmag.com/history/the-national-automated-highway-system-that-almost-was-63027245/",
+}
+
+@ARTICLE{guizzoHow,
+   author = "Erico Guizzo",
+   title = "{H}ow {G}oogle's {S}elf-{D}riving {C}ar {W}orks",
+   journal = "IEEE Spectrum",
+   month = "October 18",
+   year = "2011",
+   note = "http://spectrum.ieee.org/automaton/robotics/artificial-intelligence/how-google-self-driving-car-works",
+}
+
+@ARTICLE{riofrioMB,
+   author = "Melissa Riofrio",
+   title = "{M}ercedes-{B}enz's {F}015 concept is a self-driving, hydrogen-powered living room",
+   journal = "PCWorld",
+   month = "January 6",
+   year = "2015",
+   note = "http://www.pcworld.com/article/2865478/mercedes-benzs-f015-concept-is-a-self-driving-hydrogen-powered-living-room.html",
+}
+
+@ARTICLE{simpsonDesign,
+   author = "Joe Simpson",
+   title = "Driver-less car design: {A}re we sleep-walking into the future?",
+   journal = "Pocket-Lint",
+   month = "January 12",
+   year = "2015",
+   note = "http://www.pocket-lint.com/news/132343-driver-less-car-design-are-we-sleep-walking-into-the-future",
+}
+
+@ARTICLE{kesslerElon,
+   author = "Aaron M. Kessler",
+   title = "Elon Musk Says Self-Driving Tesla Cars Will Be in the U.S. by Summer",
+   journal = "The New York Times",
+   month = "March 19",
+   year = "2015",
+   note = "http://mobile.nytimes.com/2015/03/20/business/elon-musk-says-self-driving-tesla-cars-will-be-in-the-us-by-summer.html",
+}
+
+@ARTICLE{kingGoogle,
+   author = "Leo King",
+   title = "Google's Gargantuan Push For Cars With No Steering Wheel By 2020",
+   journal = "Forbes",
+   month = "March 19",
+   year = "2015",
+   note = "http://www.forbes.com/sites/leoking/2015/03/19/googles-gargantuan-push-for-cars-with-no-steering-wheel-by-2020/",
+}
+
+@ARTICLE{fisherInside,
+   author = "Adam Fisher",
+   title = "Inside Google's Quest to Popularize Self-Driving Cars",
+   journal = "Popular Science",
+   month = "September 18",
+   year = "2013",
+   note = "http://www.popsci.com/cars/article/2013-09/google-self-driving-car",
+}
+
+@ARTICLE{badgerElon,
+   author = "Emily Badger",
+   title = "{E}lon {M}usk says we'll outlaw human drivers in a world of driverless cars. {R}eally?",
+   journal = "The Washington Post",
+   month = "March 18",
+   year = "2015",
+   note = "http://www.washingtonpost.com/blogs/wonkblog/wp/2015/03/18/should-we-outlaw-human-drivers-in-a-world-of-driverless-cars/",
+}
+
+@ARTICLE{mcfarlandDriverless,
+   author = "Matt McFarland",
+   title = "Driverless cars: A tremendous innovation with a glaring Achilles' heel",
+   journal = "The Washington Post",
+   month = "March 16",
+   year = "2015",
+   note = "http://www.washingtonpost.com/blogs/innovations/wp/2015/03/16/driverless-cars-a-tremendous-innovation-with-a-glaring-achilles-heel/",
+}
+
+@ARTICLE{shontellTop,
+   author = "Alyson Shontell",
+   title = "Top Silicon Valley investor explains why he is skeptical about driverless cars",
+   journal = "Business Insider",
+   month = "March 15",
+   year = "2015",
+   note = "http://www.businessinsider.com/bill-gurley-is-skeptical-of-driverless-cars-2015-3",
+}
+
+@ARTICLE{ramseyWhen,
+   author = "Mike Ramsey",
+   title = "When Red Means Go, What's An Autonomous Car to Do?",
+   journal = "The Wall Street Journal",
+   month = "April 10",
+   year = "2015",
+   note = "http://blogs.wsj.com/digits/2015/04/10/when-red-means-go-whats-an-autonomous-car-to-do/",
+}
+
 
 
 
